--- a/common/src/main/resources/locale/lang-es-es.yml
+++ b/common/src/main/resources/locale/lang-es-es.yml
@@ -6,64 +6,96 @@ cancelled-render: <green>Renderizado cancelado para <world>
 successfully-reset-map: <green>Se ha restablecido con éxito el mapa <world>
 paused-renders: <green>Se ha pausado el renderizado de <world>
 unpaused-renders: <green>Resumiendo renderizado de <world>
-click-for-help: Click para mostrar ayuda
-plugin-reloaded: <green><name> v<version> recargado
 command:
-  prefix: '<white>[<gradient:#C028FF:#5B00FF>squaremap</gradient>]</white> '
-  message:
-    console-must-specify-player: <red>Debes especificar un jugador como objetivo al usar este comando desde consola
-    player-not-found-for-input: <red>No se ha encontrado a ningún jugador como '<input>'
-    console-must-specify-world: <red>Debes especificar un mundo al usar este comando desde consola
-    no-such-world: <red>No existe el mundo '<world>'
-    map-not-enabled-for-world: <red>El mapa no está habilitado para el mundo '<world>'
-    confirmation-required: <red>Confirmación requerida. Confirma usando /<command> confirm.
-    no-pending-commands: <red>No tienes ninguna orden pendiente.
-  description:
-    help: Obtén ayuda para los comandos de squaremap
-    resetmap: Restablece el mapa de un mundo
-    confirm: Confirma una orden pendiente
-    reload: Recarga el plugin
-    full-render: Empieza un renderizado completo del mundo especificado
-    cancel-render: Cancela un renderizado del mundo especificado
-    pause-render: Pausa todas las renderizaciones del mundo especificado
-    radius-render: Comienza un renderizado por radio
-    hide: Oculta a un jugador de la vista del mapa
-    show: Muestra a un jugador en la vista del mapa
-  argument:
-    optional-world: Selecciona por defecto el mundo actual del jugador si no se especifica un mundo
-    optional-center: Por defecto es (<white>0<gray>,</gray> 0</white>) si no se especifica
-    optional-player: Selecciona por defecto al jugador ejecutando el comando si no se especifica un jugador (se debe especificar un jugador en consola)
-    help-query: Help Query
-  hide:
-    already-hidden: <red><player> ya está oculto del mapa
-    hidden: <green><player> ahora está oculto en el mapa
-  show:
-    not-hidden: <red><player> no está oculto en el mapa
-    shown: <green><player> ya no está oculto en el mapa
+    message:
+        console-must-specify-player: <red>Debes especificar un jugador como objetivo
+            al usar este comando desde consola
+        player-not-found-for-input: <red>No se ha encontrado a ningún jugador como
+            '<input>'
+        console-must-specify-world: <red>Debes especificar un mundo al usar este comando
+            desde consola
+        no-such-world: <red>No existe el mundo '<world>'
+        map-not-enabled-for-world: <red>El mapa no está habilitado para el mundo '<world>'
+        confirmation-required: <red>Confirmación requerida. Confirma usando /<command>
+            confirm.
+        no-pending-commands: <red>No tienes ninguna orden pendiente.
+        progresslogging:
+            enabled: <green>Render progress logging has been enabled.
+            disabled: <green>Render progress logging has been disabled.
+            set-rate: <green>Render progress logging interval has been set to </green><seconds>
+                seconds
+            statusmessage: 'Render progress logging enabled: <enabled>, interval:
+                <green><seconds></green> seconds'
+    prefix: '<white>[<gradient:#C028FF:#5B00FF>squaremap</gradient>]</white> '
+    description:
+        help: Obtén ayuda para los comandos de squaremap
+        resetmap: Restablece el mapa de un mundo
+        confirm: Confirma una orden pendiente
+        reload: Recarga el plugin
+        full-render: Empieza un renderizado completo del mundo especificado
+        cancel-render: Cancela un renderizado del mundo especificado
+        pause-render: Pausa todas las renderizaciones del mundo especificado
+        radius-render: Comienza un renderizado por radio
+        progresslogging:
+            status: Prints the current settings for render progress logging
+            toggle: Toggles render progress logging on or off
+            rate: Sets the interval in seconds for logging render progress
+        hide: Oculta a un jugador de la vista del mapa
+        show: Muestra a un jugador en la vista del mapa
+    argument:
+        optional-world: Selecciona por defecto el mundo actual del jugador si no se
+            especifica un mundo
+        optional-center: Por defecto es (<white>0<gray>,</gray> 0</white>) si no se
+            especifica
+        optional-player: Selecciona por defecto al jugador ejecutando el comando si
+            no se especifica un jugador (se debe especificar un jugador en consola)
+        help-query: Help Query
+    hide:
+        already-hidden: <red><player> ya está oculto del mapa
+        hidden: <green><player> ahora está oculto en el mapa
+    show:
+        not-hidden: <red><player> no está oculto en el mapa
+        shown: <green><player> ya no está oculto en el mapa
+click-for-help: Click para mostrar ayuda
+click-to-confirm: Click to confirm
+click-to-toggle: Click to toggle
+plugin-reloaded: <green><name> v<version> recargado
 ui:
-  page-title: squaremap - {world}
-  coordinates: Coordenadas<br/><x>, <z>
-  sidebar:
-    player-list: Jugadores ({cur}/{max})
-    world-list: Mundos
-  layers:
-    player-tracker: Jugadores
-    world-spawn: Spawn
-    world-border: Borde del Mundo
+    page-title: squaremap - {world}
+    coordinates: Coordenadas<br/><x>, <z>
+    sidebar:
+        player-list: Jugadores ({cur}/{max})
+        world-list: Mundos
+    layers:
+        player-tracker: Jugadores
+        world-spawn: Spawn
+        world-border: Borde del Mundo
 log:
-  started-full-render: <dark_aqua>Comenzó el renderizado completo del mapa <yellow><world>
-  started-radius-render: <dark_aqua>Comenzó el renderizado por radio del mapa <yellow><world>
-  scanning-region-files: <yellow>Escaneando archivos de regiones...
-  found-total-region-files: <green>Encontrados <gray><total> <green>archivos de regiones
-  finished-rendering: <dark_aqua>Ha finalizado el renderizado del mapa <yellow><world>
-  cancelled-rendering: <dark_aqua>Renderizando del mapa <yellow><world> <dark_aqua>ha sido interrumpido
-  resumed-rendering: <dark_aqua>Renderizando del mapa <yellow><world> <dark_aqua>ha sido reanudado
-  scanning-region-progress: <gray>(</gray><yellow><percent></yellow><gray>)</gray> <dark_aqua>Mundo<gray>:</gray> <yellow><world></yellow> Chunks<gray>:</gray> <yellow><current_chunks></yellow><gray>/</gray><yellow><total_chunks></yellow> Tiempo transcurrido<gray>:</gray> <yellow><elapsed></yellow> ETA<gray>:</gray> <yellow><eta></yellow> Velocidad<gray>:</gray> <yellow><rate></yellow> cps
-  scanning-region-progress-with-regions: <gray>(</gray><yellow><percent></yellow><gray>)</gray> <dark_aqua>Mundo<gray>:</gray> <yellow><world></yellow> Regiones<gray>:</gray> <yellow><current_regions></yellow><gray>/</gray><yellow><total_regions></yellow> Chunks<gray>:</gray> <yellow><current_chunks></yellow><gray>/</gray><yellow><total_chunks></yellow> Tiempo transcurrido<gray>:</gray> <yellow><elapsed></yellow> ETA<gray>:</gray> <yellow><eta></yellow> Velocidad<gray>:</gray> <yellow><rate></yellow> cps
-  internal-web-disabled: <green>El servidor web interno está desactivado en config.yml
-  internal-web-started: <green>Servidor web interno ejecutándose en <bind>:<port>
-  internal-web-stopped: <green>Servidor web interno detenido
-  internal-web-start-error: El servidor web interno no pudo iniciarse
-  could-not-create-directory: No se pudo crear el directorio <path>
-  could-not-save-region: No se pudo guardar el mapa para la región <x>,<z>
-  internal-web-not-running: Se ha producido un error con el servidor web interno
+    started-full-render: Comenzó el renderizado completo del mapa <world>
+    started-radius-render: Comenzó el renderizado por radio del mapa <world>
+    scanning-region-files: Escaneando archivos de regiones...
+    found-total-region-files: Encontrados <total> archivos de regiones
+    finished-rendering: Ha finalizado el renderizado del mapa <world>
+    cancelled-rendering: Renderizando del mapa <world> ha sido interrumpido
+    resumed-rendering: Renderizando del mapa <world> ha sido reanudado
+    scanning-region-progress: '(<percent>) Mundo: <world> Chunks: <current_chunks>/<total_chunks>
+        Tiempo transcurrido: <elapsed> ETA: <eta> Velocidad: <rate> cps'
+    scanning-region-progress-with-regions: '(<percent>) Mundo: <world> Regiones: <current_regions>/<total_regions>
+        Chunks: <current_chunks>/<total_chunks> Tiempo transcurrido: <elapsed> ETA:
+        <eta> Velocidad: <rate> cps'
+    internal-web-disabled: El servidor web interno está desactivado en config.yml
+    internal-web-started: Servidor web interno ejecutándose en <bind>:<port>
+    internal-web-stopped: Servidor web interno detenido
+    internal-web-start-error: El servidor web interno no pudo iniciarse
+    could-not-create-directory: No se pudo crear el directorio <path>
+    could-not-read-region: Could not read map image for region <x>,<z> (image corrupted?).
+        It will be overwritten.
+    could-not-save-region: No se pudo guardar el mapa para la región <x>,<z>
+    internal-web-not-running: Se ha producido un error con el servidor web interno
+    update-checker:
+        fetching-version-information: Fetching version information...
+        behind-branch: squaremap is <behind> version(s) behind branch '<branch>'!
+        download-dev-builds: Download dev builds from <link>
+        unknown-commit: Unknown commit '<commit>', cannot check for updates.
+        behind-releases: squaremap is <behind> version(s) out of date.
+        download-release: Download the latest release (<latest>) from <link>
